--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,5 +1,11 @@
 {
   "name": "m-textshare",
   "app_id": "",
-  "type": "ionic-angular"
+  "type": "ionic-angular",
+	"proxies":[
+		{
+			"path":"/api",
+			"proxyUrl": "http://textshare.io"
+		}
+	]
 }
